phase-2/day-12/manifests/03-pod-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  namespace: network-lab
  labels:
    app: frontend
spec:
  containers:
  - name: alpine
    image: alpine:latest
    command: ["sleep", "3600"]
